[package]
name = "actix-web-middleware-slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="4", default_features = false }
actix-http = "3"
futures-util = { version="0.3", default_features = false }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version="1.21.1", features=["macros"] }
